syntax = "proto3";

package resonance.logic.v1;

option go_package = "github.com/ceyewan/resonance/api/gen/go/logic/v1;logicv1";

// PresenceService 处理网关状态同步相关的请求
service PresenceService {
  // SyncStatus 网关通过 Unary 调用同步用户在线状态到 Logic
  // 支持批量上报（通过 repeated 字段），以应对重连风暴
  rpc SyncStatus(SyncStatusRequest) returns (SyncStatusResponse);
}

message SyncStatusRequest {
  int64 seq_id = 1; // 序列号，用于回执
  string gateway_id = 2; // 网关实例ID

  // 批量事件
  repeated UserOnline online_batch = 3;
  repeated UserOffline offline_batch = 4;
}

message UserOnline {
  string username = 1;
  string remote_ip = 2;
  int64 timestamp = 3;
}

message UserOffline {
  string username = 1;
  int64 timestamp = 2;
}

message SyncStatusResponse {
  int64 seq_id = 1; // 确认的序列号
  string error = 2; // 错误信息
}
